# SensorMonitor

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hello-jni.c  optimal_filtering-jni.c  optimal_filtering-jni.h
app/src/main/java/com/huawei/sensormonitor/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-round/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
